--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ LOG_LEVEL=debug
 
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=
+
+VAULT_URL=localhost:8200
+VAULT_TOKEN=
+VAULT_ROLE_ID=
+VAULT_SECRET_ID=
