--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vault-sync",
   "version": "1.0.0",
   "private": true,
-  "description": "A helper app to sync vault secrets with Github Action's secrets.",
+  "description": "A helper app to sync vault secrets with Github Action secrets.",
   "author": "Richard Simpson <richardsimpson@outlook.com>",
   "license": "ISC",
   "repository": "https://github.com/RichiCoder1/vault-sync.git",
@@ -15,17 +15,26 @@
   ],
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc && (tsc -w --preserveWatchOutput & nodemon)",
+		"build:watch": "run-s build watch",
+		"watch": "run-p -r watch:*",
+		"watch:tsc": "tsc -w --preserveWatchOutput",
+		"watch:nodemon": "nodemon",
     "dev": "npm run build:watch",
     "start": "probot run ./lib/index.js",
-    "lint": "standard **/*.ts --fix",
-    "test": "jest && standard **/*.ts",
+    "test": "jest",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "probot": "^9.5.3"
+    "@hapi/joi": "^17.1.0",
+    "@usefultools/monads": "^3.0.3",
+    "got": "^10.5.7",
+    "jsonpath-plus": "^3.0.0",
+    "npm-run-all": "^4.1.5",
+    "probot": "^9.5.3",
+    "tweetsodium": "0.0.4"
   },
   "devDependencies": {
+    "@types/hapi__joi": "^16.0.11",
     "@types/jest": "^25.1.0",
     "@types/nock": "^11.1.0",
     "@types/node": "^13.1.0",
@@ -35,21 +44,16 @@
     "nock": "^12.0.0",
     "nodemon": "^2.0.0",
     "smee-client": "^1.1.0",
-    "standard": "^14.3.1",
     "ts-jest": "^25.1.0",
     "typescript": "^3.6.4"
   },
   "engines": {
     "node": ">= 8.3.0"
   },
-  "standard": {
-    "parser": "@typescript-eslint/parser",
-    "env": [
-      "jest"
-    ],
-    "plugins": [
-      "typescript"
-    ]
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": true,
+    "singleQuote": false
   },
   "jest": {
     "testEnvironment": "node"
